AWS-ALB-Ingress/2-nginx-red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-red
  namespace: nginx-red
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-red
  template:
    metadata:
      labels:
        run: nginx-red
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 256Mi
