AWS-ALB-Ingress/4-nginx-red-ingress.yaml
---
#apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-red
  labels:
    app: nginx-red
  namespace: nginx-red
  annotations:
    # Single ALB Ingress Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ingress-demo
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: |
      arn:aws:acm:us-east-1:305779340042:certificate/6fdf3f78-e6fb-4238-b5e3-c71953e1b02e
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      } 
spec:
  rules:
  - host: red.yallalabs.com
    http:
      paths:
      - path: /    
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port: 
              name: use-annotation
      - path: /    
        pathType: Prefix
        backend:
          service:
            name: nginx-red
            port: 
              number: 80            
      
# spec:
#   rules:
#     - host: red.yallalabs.com
#       http:
#         paths:
#           - path: / # SSL Redirect Setting
#             backend:
#               serviceName: ssl-redirect
#               servicePort: use-annotation
#           - path: /
#             backend:
#               serviceName: nginx-red
#               servicePort: 80
